Add helmrepository to kustomization

--- a/cluster/base/flux-system/kustomization.yaml
+++ b/cluster/base/flux-system/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - webhook-secret.sops.yaml
   - alert-provider.yaml
   - flux-alert.yaml
+  - ./charts/helm/argocd-charts.yaml
   - ./charts/helm/metallb-charts.yaml
   - ./charts/helm/nfs-subdir-external-provisioner-charts.yaml
   - ./charts/helm/traefik-charts.yaml
