--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -30,6 +30,7 @@ spec:
           - default
           - networking
           - monitoring
+          - argocd
       name: "you"
       customApps: []
       groups:
