--- a/cluster/apps/argocd/argocd/helm-release.yaml
+++ b/cluster/apps/argocd/argocd/helm-release.yaml
@@ -710,7 +710,7 @@ spec:
           hajimari.io/appName: "argocd"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         hosts:
-          - host: "argocd.${SECRET_DOMAIN}"
+          - host: "argocd.test.example"
             paths:
               - path: /
                 pathType: Prefix
