--- a/cluster/apps/argocd/argocd/argocd-secrets.sops.yaml
+++ b/cluster/apps/argocd/argocd/argocd-secrets.sops.yaml
@@ -7,18 +7,21 @@ metadata:
     labels:
         app.kubernetes.io/name: argocd-secret
         app.kubernetes.io/part-of: argocd
+    annotations:
+        meta.helm.sh/release-namespace: argocd
+        meta.helm.sh/release-name: argocd
 type: Opaque
 data:
-    #ENC[AES256_GCM,data:VWIjqLqvItsfpwq7BfWy7rydC97JmRUvgrxpG9N4bKoMVzFxFiluD6g/9V27xTKYc8uL8xN7sHMC6JU=,iv:7Wg3Xx9UONAylPNiSdbi6hYObOfELzFVhzgirFyq/Vg=,tag:ALEPwPS9Z7aRieSmGfFoKw==,type:comment]
-    #ENC[AES256_GCM,data:t0h21UuL3SoTv9N9rDHxb85HUavZhrXNwq/BL4+NPSzTaf9sKsvxAw8ueA1HkUYXrCR9RNYPHxob1bs5atuZ3tZVAtB2mPz8GooNcygM5w==,iv:aTT8bw7F2Lt6SsVrdAMzKM5Jh0326UYbDQwI+3C8+9Q=,tag:I8TRATox02cbtVEqzivUEQ==,type:comment]
-    #ENC[AES256_GCM,data:ZdI78+j/2JkA,iv:b1puMBeVZyVmyRIy1D2xhzoUVJS23Ut1VOEGmXaI2x4=,tag:OOhOFhwmFHAkWBF/cSFDPg==,type:comment]
-    #ENC[AES256_GCM,data:I0Cj23BqbKH2,iv:v5pWtMl9yNhZvqF3sD+pzuzX7VSAYqGVjclPKumxEXk=,tag:eeS1n1avpdlZQ65njkTnvw==,type:comment]
-    #ENC[AES256_GCM,data:OvIKC4R3Eq4Kjk954q1gFRFkfmpYFLWR4Shw9wzSSSmmjKrytypwTtkVnNXC8ysjrjG9ivDw9FHeXHdts+HkqUAYmKvZWxhCEg==,iv:8qdfHnLFPROBLigHigTG000ur61KvzEhmzAata+JFoE=,tag:bnKx/aLCpqwabqpiqUR5uA==,type:comment]
-    #ENC[AES256_GCM,data:Jz0FWlhrWM5Lp2CdnYKbmJehi8rjKMhdZ2nn6qMDkOTANvqgWWKWYH5FYgUXrlbhb8qgPLTzv75PrgbIowTMwf3LHec=,iv:I+oB2+iJH+yEXF20kssv/FNlQR+vPh1YAUOWXYrnZeA=,tag:5afWmmu9PoU5YJL9daK6vg==,type:comment]
-    admin.password: ENC[AES256_GCM,data:p0YnQQ6qZo5N20cX7qSe0t5g75qbDa6cxLrPa/a/jf0=,iv:DZ6+iIrvXsibrYhBKb3HNeuBYKUA+nizbPFo0DFvnkU=,tag:bkavUlC7Zf3WHw/HiNGAUQ==,type:str]
-    #ENC[AES256_GCM,data:KK9wY6tyNnSHlCEHYm7/gM7SYBaFAGYbEthYB+mDc+tti7DXtkZMOe/cojmuhpA1tY9zfbQHkOHHGt26TA67,iv:Slxxs2uxAquzPYXaL+uyBCfHK3EFb0iaH23bK0FAllU=,tag:jWqRoloNNhBAtIF8CxPGgA==,type:comment]
-    #ENC[AES256_GCM,data:jp/uMUW4WJMSsCmiOg/eBx4rEjbx0rHp1HJXaw==,iv:a3EqbmRR7cXUxE5XDikUWikXjfO2JZgs/hFGYsfk79M=,tag:E9lA4ox9IHRLUtk2bgtzFA==,type:comment]
-    #ENC[AES256_GCM,data:qh737UD5DwNQIR7M45yQHsid,iv:I4WII/7jNh/KpKvqMfaIAxvfHuhJGHdGrqgZKT3qHzU=,tag:dBCEroiyqW0YaFNT3ZkY6g==,type:comment]
+    #ENC[AES256_GCM,data:ZGek4WMKwfE7wKyh72WHlgccJ04enrRv106FoF/w1mNWP0QoieBy6iQKCoeD9ZLK9CuoeBYk1HtZq4M=,iv:XARB1KY33rB7Dv93+XQTJ20cF9xs1GTsWXTckU0VLXg=,tag:KAsp12Y+ya0WKrsFWjKecA==,type:comment]
+    #ENC[AES256_GCM,data:igunEnG4P9BbibznzPhVnUSl9uRMZv3zy3EXKq9qvk5RYN+Fb9pHJuRoKmHDw0JIDc9G99IvfjWgpRP/PU9k76Ok9LoGz6xRBb09zFnyYQ==,iv:uXM46Qnqk+b214Fj8EU0ANZN9Du1LBHEWCKRUD5NfUc=,tag:1O3HAHBzFARHDC1vDyGgHQ==,type:comment]
+    #ENC[AES256_GCM,data:VuwkFOuoJcW6,iv:cyBKH9YzoO0BxIVa9nTqdkHl7u+ZGMTPh/zPtywNfTQ=,tag:95yYzXiqr1yTWeBP6srmEg==,type:comment]
+    #ENC[AES256_GCM,data:b7D1qIV0X6d8,iv:0srQ4G3v4Yl68J7rgkg69770crDHVBXvj8N1dE/x69g=,tag:pBUJ44dizf+qDE+oxGWiLQ==,type:comment]
+    #ENC[AES256_GCM,data:iCHXdIlW6pPngxQzv+w+I5WElzT2FxD/2V0RVxdi2axYK2gb1hty2GxXyqd2LcB3Y9lxfizbCR/ZJqPyJmXt2EcImVrda4Q94A==,iv:qUVdtINAVdP814JLK2xpg4H1D+9siZaqTmf0ghRLAwk=,tag:Ye4Pg3Mt8ZD1891J2vnYjg==,type:comment]
+    #ENC[AES256_GCM,data:LKVw7nfzn7WySFJeUfRZqQ8rkRmXoxTz3nm4PcbVDgDmbZeMVR58BBwZlOjPylTQKTuIT8ORQHklfkqkt8J3GwGL5tE=,iv:XpIbvLtgKl2Wr8F1wVBcvLy5yT8B8sIY7mRUINC2Ewc=,tag:RBOlQnF/SWeCQXtdrbOLag==,type:comment]
+    admin.password: ENC[AES256_GCM,data:I5IMMyQSG4ji1AaqLJTQKvPgIy0FslNP7cwlBQVbJDY=,iv:pDQjYwRnK5IB9VVMcbGrl/5OGxsBV26pOYOpM+1lbdc=,tag:+3upMb2KxoFajF8v1jDUpQ==,type:str]
+    #ENC[AES256_GCM,data:3bR2XsRVuhLAElZiZSV0Y3l7txIw5zqUIigVGpta5Z1xd77h0QyTjDlyVBLZ8jHDx5AEMEzFFaQSGL93N75e,iv:3JARcWWzvB8v+ZvK+IVH+iCI9TA3iTuzTypFEEs4ank=,tag:x8IOg2VeTxBEygMLSLIIwQ==,type:comment]
+    #ENC[AES256_GCM,data:fkfJAvVVz56Rg8vxPCSj7B3EBTYdvoeVyQb6uw==,iv:nUaLBOm+NMElD3CMSMnFYUe6hQJ9pbZjDc/gD2R25Pw=,tag:HI91UCoxmW+4TfWoRTK1Sg==,type:comment]
+    #ENC[AES256_GCM,data:dU02MDxenPRJvQks3gbXezog,iv:ySKyDIMcPu35LF1OxUl238nPCfpYgDiKJLnmY+aQD2g=,tag:x8dDmlfp6qTPaGlSZrBTdA==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -28,14 +31,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5QkdCSndiS2MvMWFuNXgx
-            OFhKUnVZdVp6VWM2elUyYjg2UVg1ZWxiTkYwCjBmVklBVDdnR3dOQ1IxNUJsSllR
-            NUZoeVZvd0FCRXZ4c1ZQYjhLcWVUNEEKLS0tIEFjdXJsVjh1d2h5SUtkRUdBby9y
-            VnpoQll5WVpvenBjMitLMUZueWswYTQK2fVZhccYLDoPtO739Q5JtgQq6Leq8OSg
-            EzOmW/woQYB13BmFj5lwRGiIYVcCFOz5KLAU8o6oWuGxSgA3Rnrcow==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2b0dMbkg3TkI4N0ZiTTVn
+            eFZoRklQVldyMk5qU0RsejZJWktlVktiY3hBCmUxWjQ1VWN1NlRSREplQWk1bE0z
+            djF1TU9yYnB4L2xJSm82K3BMbnhrZ1EKLS0tIEVLeGxGL1VDc2J1QjZ0cXdjNk1W
+            UzllOWNJMWdsWitxOGlPaUVSQmhuc0EK6rJfUXF+n1QKv8PDBYH0yxtiEwcyBgD7
+            ZvWCp75JsyJd3/cDruDo9oXPk+NeUAmkOWoic8/hoOdwcLbfxTN7WA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-19T21:29:00Z"
-    mac: ENC[AES256_GCM,data:34WiCSuwvzRhXQxsm49u8jpZVjyCH0Ak6lj9rBhRdLBCZNtn2VQ06HkIhjQjVd5ctIZX7dq7zaiCSPkmdU6ZVAB1FS3QjdE84PvV6fTHptvjgSGbOleC1V/Agd7QnfYRadW12CmKtd5qdTHD1A3Fy0fz7rShrBA3eMIrKEpf2G0=,iv:69CIJ0KKjjqExFqvCa2pGrAxN7A33P1oNDgmtf2tWb0=,tag:k0HwlTvOJjQ+jiqChfOtrw==,type:str]
+    lastmodified: "2022-08-20T00:16:30Z"
+    mac: ENC[AES256_GCM,data:m4bvaqZ8WF+EDQdm1PlWvz71v38uo+js/O9bu+Mp+ajfyTwQ3teKNyuLd9fH3NfZibiNlLpW5HPFGY2+8zEYjvjSq/5Bo06Df4ygx+G1HOPP2vuycMq1SKch0GqLmH6BV7wiVTwZtdvt3BU6hmEPEHJ1G4qIuTvgqZbPXezQdJw=,iv:mVyF6tEnJw7H0actGwuog/lG/dKCLpWI4+ef9vsgKjc=,tag:oOkFeGvYweH4ZWUnj5dlFQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
@@ -48,10 +51,10 @@ metadata:
     labels:
         argocd.argoproj.io/secret-type: repo-creds
 stringData:
-    url: ENC[AES256_GCM,data:M3obNj2QIXy4u6Z/YvePSAyE/iiezjt5BA==,iv:U3qfOTGjNEXyifh8PjFI6ycKQr9JuzgJnWCmRX9Y8n4=,tag:dQ4ia792qiIFVNBlt3eMaw==,type:str]
-    type: ENC[AES256_GCM,data:dX3iYg==,iv:4SZDQ4n5uR4V5sW4zSxgH5fY9HElJOqOdSXudGjL0U8=,tag:przeds521bgp92ynl0w5fQ==,type:str]
-    password: ENC[AES256_GCM,data:2vQU0TF9jdZcdD6/Z0RGow==,iv:CNNDdnTpHU5fbn1caTJWcskH0JijlFRIsMuiWGW7gPk=,tag:EGaqQ1Vdy802JPRw4TpILg==,type:str]
-    username: ENC[AES256_GCM,data:xoS7zQ7z,iv:GTtPY+L0FSEEeTpejnoI38C43SZCJ/xjN7Hs5ZCpdhQ=,tag:wwiQ48Su+k7ZUbw4CgdOnQ==,type:str]
+    url: ENC[AES256_GCM,data:9jlSXE00sqHgn++SmmtvN4i3IQCF1oIh1A==,iv:SqtzFg7VCWCtthgxy16AYVcfikN7vcS2z6gnk4Qe/Q4=,tag:nbOWT+TtFWMUbhwwJDt4Og==,type:str]
+    type: ENC[AES256_GCM,data:SJIoUw==,iv:Nt1f/FPDbO4CR9KQuQZoxWmrHs9T+i+r0GM6yjlKoOE=,tag:t5TfBToZsiKH4VUj4wT6SA==,type:str]
+    password: ENC[AES256_GCM,data:Vm7qURlS8S5BOQMT+GyafQ==,iv:LeopT7DsHzKM9QluQBrPr2R5fRBytGsC/ggbjHT2N/w=,tag:ySuneoAUIdjF81QIyI+0dA==,type:str]
+    username: ENC[AES256_GCM,data:gQtggONp,iv:Yram6ozHYpI6ajcnWNWOg5DwKoC/MxZqFr8rHlKQjuY=,tag:Eye9Ky0MRjNXMch3e27SLQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -61,14 +64,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5QkdCSndiS2MvMWFuNXgx
-            OFhKUnVZdVp6VWM2elUyYjg2UVg1ZWxiTkYwCjBmVklBVDdnR3dOQ1IxNUJsSllR
-            NUZoeVZvd0FCRXZ4c1ZQYjhLcWVUNEEKLS0tIEFjdXJsVjh1d2h5SUtkRUdBby9y
-            VnpoQll5WVpvenBjMitLMUZueWswYTQK2fVZhccYLDoPtO739Q5JtgQq6Leq8OSg
-            EzOmW/woQYB13BmFj5lwRGiIYVcCFOz5KLAU8o6oWuGxSgA3Rnrcow==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2b0dMbkg3TkI4N0ZiTTVn
+            eFZoRklQVldyMk5qU0RsejZJWktlVktiY3hBCmUxWjQ1VWN1NlRSREplQWk1bE0z
+            djF1TU9yYnB4L2xJSm82K3BMbnhrZ1EKLS0tIEVLeGxGL1VDc2J1QjZ0cXdjNk1W
+            UzllOWNJMWdsWitxOGlPaUVSQmhuc0EK6rJfUXF+n1QKv8PDBYH0yxtiEwcyBgD7
+            ZvWCp75JsyJd3/cDruDo9oXPk+NeUAmkOWoic8/hoOdwcLbfxTN7WA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-19T21:29:00Z"
-    mac: ENC[AES256_GCM,data:34WiCSuwvzRhXQxsm49u8jpZVjyCH0Ak6lj9rBhRdLBCZNtn2VQ06HkIhjQjVd5ctIZX7dq7zaiCSPkmdU6ZVAB1FS3QjdE84PvV6fTHptvjgSGbOleC1V/Agd7QnfYRadW12CmKtd5qdTHD1A3Fy0fz7rShrBA3eMIrKEpf2G0=,iv:69CIJ0KKjjqExFqvCa2pGrAxN7A33P1oNDgmtf2tWb0=,tag:k0HwlTvOJjQ+jiqChfOtrw==,type:str]
+    lastmodified: "2022-08-20T00:16:30Z"
+    mac: ENC[AES256_GCM,data:m4bvaqZ8WF+EDQdm1PlWvz71v38uo+js/O9bu+Mp+ajfyTwQ3teKNyuLd9fH3NfZibiNlLpW5HPFGY2+8zEYjvjSq/5Bo06Df4ygx+G1HOPP2vuycMq1SKch0GqLmH6BV7wiVTwZtdvt3BU6hmEPEHJ1G4qIuTvgqZbPXezQdJw=,iv:mVyF6tEnJw7H0actGwuog/lG/dKCLpWI4+ef9vsgKjc=,tag:oOkFeGvYweH4ZWUnj5dlFQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
