Add missing label key in secret

--- a/cluster/apps/argocd/argocd/argocd-secrets.sops.yaml
+++ b/cluster/apps/argocd/argocd/argocd-secrets.sops.yaml
@@ -7,21 +7,22 @@ metadata:
     labels:
         app.kubernetes.io/name: argocd-secret
         app.kubernetes.io/part-of: argocd
+        app.kubernetes.io/managed-by: Helm
     annotations:
         meta.helm.sh/release-namespace: argocd
         meta.helm.sh/release-name: argocd
 type: Opaque
 data:
-    #ENC[AES256_GCM,data:ZGek4WMKwfE7wKyh72WHlgccJ04enrRv106FoF/w1mNWP0QoieBy6iQKCoeD9ZLK9CuoeBYk1HtZq4M=,iv:XARB1KY33rB7Dv93+XQTJ20cF9xs1GTsWXTckU0VLXg=,tag:KAsp12Y+ya0WKrsFWjKecA==,type:comment]
-    #ENC[AES256_GCM,data:igunEnG4P9BbibznzPhVnUSl9uRMZv3zy3EXKq9qvk5RYN+Fb9pHJuRoKmHDw0JIDc9G99IvfjWgpRP/PU9k76Ok9LoGz6xRBb09zFnyYQ==,iv:uXM46Qnqk+b214Fj8EU0ANZN9Du1LBHEWCKRUD5NfUc=,tag:1O3HAHBzFARHDC1vDyGgHQ==,type:comment]
-    #ENC[AES256_GCM,data:VuwkFOuoJcW6,iv:cyBKH9YzoO0BxIVa9nTqdkHl7u+ZGMTPh/zPtywNfTQ=,tag:95yYzXiqr1yTWeBP6srmEg==,type:comment]
-    #ENC[AES256_GCM,data:b7D1qIV0X6d8,iv:0srQ4G3v4Yl68J7rgkg69770crDHVBXvj8N1dE/x69g=,tag:pBUJ44dizf+qDE+oxGWiLQ==,type:comment]
-    #ENC[AES256_GCM,data:iCHXdIlW6pPngxQzv+w+I5WElzT2FxD/2V0RVxdi2axYK2gb1hty2GxXyqd2LcB3Y9lxfizbCR/ZJqPyJmXt2EcImVrda4Q94A==,iv:qUVdtINAVdP814JLK2xpg4H1D+9siZaqTmf0ghRLAwk=,tag:Ye4Pg3Mt8ZD1891J2vnYjg==,type:comment]
-    #ENC[AES256_GCM,data:LKVw7nfzn7WySFJeUfRZqQ8rkRmXoxTz3nm4PcbVDgDmbZeMVR58BBwZlOjPylTQKTuIT8ORQHklfkqkt8J3GwGL5tE=,iv:XpIbvLtgKl2Wr8F1wVBcvLy5yT8B8sIY7mRUINC2Ewc=,tag:RBOlQnF/SWeCQXtdrbOLag==,type:comment]
-    admin.password: ENC[AES256_GCM,data:I5IMMyQSG4ji1AaqLJTQKvPgIy0FslNP7cwlBQVbJDY=,iv:pDQjYwRnK5IB9VVMcbGrl/5OGxsBV26pOYOpM+1lbdc=,tag:+3upMb2KxoFajF8v1jDUpQ==,type:str]
-    #ENC[AES256_GCM,data:3bR2XsRVuhLAElZiZSV0Y3l7txIw5zqUIigVGpta5Z1xd77h0QyTjDlyVBLZ8jHDx5AEMEzFFaQSGL93N75e,iv:3JARcWWzvB8v+ZvK+IVH+iCI9TA3iTuzTypFEEs4ank=,tag:x8IOg2VeTxBEygMLSLIIwQ==,type:comment]
-    #ENC[AES256_GCM,data:fkfJAvVVz56Rg8vxPCSj7B3EBTYdvoeVyQb6uw==,iv:nUaLBOm+NMElD3CMSMnFYUe6hQJ9pbZjDc/gD2R25Pw=,tag:HI91UCoxmW+4TfWoRTK1Sg==,type:comment]
-    #ENC[AES256_GCM,data:dU02MDxenPRJvQks3gbXezog,iv:ySKyDIMcPu35LF1OxUl238nPCfpYgDiKJLnmY+aQD2g=,tag:x8dDmlfp6qTPaGlSZrBTdA==,type:comment]
+    #ENC[AES256_GCM,data:zJgzqDmIL2IWvkrh8nyNtPZPQRW92Erlw0IWogu0xG3X3YjvPpjPFhUFP5JEEUFbnrFZmHqufTUGUZo=,iv:yD0w8ASzn/MdbMFg4my/CmPimeobg9Oi7P6Yy1KJwXc=,tag:yWvRWsTbW1+6ocsLhYDwcA==,type:comment]
+    #ENC[AES256_GCM,data:eHSXTWbV3K0+9sATxLtgkMicOrixSI4GWqmHe9MXE35Px2JU8QCP6FHlkS1ECE0wdIbTuKAoNQWEF4yY1s671zNjgB2xn4X00XR/CAFH0g==,iv:8ogDbiEqjvF8/ETqEP6S5i3h9CvG6wPmXjbNCxJxfEA=,tag:jhV6ODKHFdTwO+ZnQJ+YFw==,type:comment]
+    #ENC[AES256_GCM,data:M9ay4+u2wgf1,iv:fytTB+hTmx3YXA4pccvE8WiOzDx5hFSEE351FCFmVv0=,tag:53ds3i1g5nEN9PJH07Wcig==,type:comment]
+    #ENC[AES256_GCM,data:86Bytn7TcfCd,iv:pS3O/KEnv5SYZdvq91dG9CNetE/I+JXZS5pnK592U4A=,tag:dq8rR0RSiwPWmg+1EasvoQ==,type:comment]
+    #ENC[AES256_GCM,data:1BBceXtLcxJ4v0aylZmWaVImoT9aZI3jK1pi9BprwmVSx7eNOITStfKphSNqXTzHY5zPtMxfQ6Dgaz4tAT7Hs1AYPAYhQLesiA==,iv:TTp0ITNzRy3b2Z+0Qv9YiFuYOoCmShTUty7BXq0Fog4=,tag:QYrD6fm5dwZia3QLcrypfQ==,type:comment]
+    #ENC[AES256_GCM,data:kxKMFvyq10Hr/b2M1WskXclXkrowbtmoG1C0pQcNHhecFhCmZwo/zhVqT9DuV28zElL4aOh48VMxvIn8SBP3E00P9J4=,iv:+Lh+GYtYMhK1SU9y9Ty1Tix7j+uYZVsFxHTt31dygQ4=,tag:S+2t7Z1YmO7Kfgmz4teXAg==,type:comment]
+    admin.password: ENC[AES256_GCM,data:pvXIHsN2NPfCn/+68ug/I68oviIj5qQpOGScE0j/c7k=,iv:B3SDRVH8jnf3dYnL0PDNmwHzBaxfda1loe2CPtxiOKg=,tag:yTac/mlG3tCsYdDTSQFOVw==,type:str]
+    #ENC[AES256_GCM,data:KkJrDs6nv0AavsCfkWwVaTdY50TuShxy8Td6brev1lsNrMOpmFsEvy28otm2rGYrfOvzQgaIdCUJysYAqc6K,iv:m4uSGY6EtH1UXep7KWTdU+TakRSC3M71m2qMhmV1d0U=,tag:+FRVTYlk6tqBMKqVVza/Rg==,type:comment]
+    #ENC[AES256_GCM,data:4RbHjYiXUZ8BVUJDbm+rJFzwh9TqBqpcCN+f/A==,iv:GOtjAvoL/N7nnNp49xIqnLxYCISapD5Ldeff3houDFA=,tag:LmrkqzfcjFp55l1PKCimFg==,type:comment]
+    #ENC[AES256_GCM,data:5ZA969zy0VV5NZefQqBD0chR,iv:8vvtdMccZTgUxBIFuxARGh5Tv4QZY+jA4c27CfEWl9w=,tag:11mDfRoi4uVL3Lrkwq0TJg==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -31,14 +32,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2b0dMbkg3TkI4N0ZiTTVn
-            eFZoRklQVldyMk5qU0RsejZJWktlVktiY3hBCmUxWjQ1VWN1NlRSREplQWk1bE0z
-            djF1TU9yYnB4L2xJSm82K3BMbnhrZ1EKLS0tIEVLeGxGL1VDc2J1QjZ0cXdjNk1W
-            UzllOWNJMWdsWitxOGlPaUVSQmhuc0EK6rJfUXF+n1QKv8PDBYH0yxtiEwcyBgD7
-            ZvWCp75JsyJd3/cDruDo9oXPk+NeUAmkOWoic8/hoOdwcLbfxTN7WA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2S2hmbWVvcmx6VHNKS0Rh
+            OWFvUWg4emFsUUdiVGtWNGpoRTJ1OVNEbVNJCk90bmVuSE53cS84VkQxREJIQSta
+            ZU91M0Nra3BSVVIyOTQ5RVVoeXVPYTQKLS0tIEtKdDlHU1FwRjJmbmp2cDhQWUpT
+            Ryt4aE9pdFNzdVE3RDJIemhVVTY3dEUKdCvlBGzs2JZeHK1iqDWuFUwIpKi2NUSE
+            8sv03IU5IswcNwxJxJ9I4e/m2wjxNG5uTGaTho5666LdhTDU3RvKCw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-20T00:16:30Z"
-    mac: ENC[AES256_GCM,data:m4bvaqZ8WF+EDQdm1PlWvz71v38uo+js/O9bu+Mp+ajfyTwQ3teKNyuLd9fH3NfZibiNlLpW5HPFGY2+8zEYjvjSq/5Bo06Df4ygx+G1HOPP2vuycMq1SKch0GqLmH6BV7wiVTwZtdvt3BU6hmEPEHJ1G4qIuTvgqZbPXezQdJw=,iv:mVyF6tEnJw7H0actGwuog/lG/dKCLpWI4+ef9vsgKjc=,tag:oOkFeGvYweH4ZWUnj5dlFQ==,type:str]
+    lastmodified: "2022-08-20T00:20:01Z"
+    mac: ENC[AES256_GCM,data:EQTosBH5O/M6rF6T2fOEBVxJxjNSjSJ/n9ae8AzoE1V8Wqim90Ej8p6EopyL4RoD3CE2Q2+pmdpjYU8SACA3N6DIE5QprYelLroj7dpyTktiu8JN2r9pBCAo3gwHSpgVc1am18kvcZ1gLKXTxkkZOwFs2v48KkhqxZE78qhFQns=,iv:LXTTGGjQlCk+GplLnRffk+ppya2LpDWAlen5G9sQX+A=,tag:H2kSCKF0eRKtGXXAoyMzQw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
@@ -51,10 +52,10 @@ metadata:
     labels:
         argocd.argoproj.io/secret-type: repo-creds
 stringData:
-    url: ENC[AES256_GCM,data:9jlSXE00sqHgn++SmmtvN4i3IQCF1oIh1A==,iv:SqtzFg7VCWCtthgxy16AYVcfikN7vcS2z6gnk4Qe/Q4=,tag:nbOWT+TtFWMUbhwwJDt4Og==,type:str]
-    type: ENC[AES256_GCM,data:SJIoUw==,iv:Nt1f/FPDbO4CR9KQuQZoxWmrHs9T+i+r0GM6yjlKoOE=,tag:t5TfBToZsiKH4VUj4wT6SA==,type:str]
-    password: ENC[AES256_GCM,data:Vm7qURlS8S5BOQMT+GyafQ==,iv:LeopT7DsHzKM9QluQBrPr2R5fRBytGsC/ggbjHT2N/w=,tag:ySuneoAUIdjF81QIyI+0dA==,type:str]
-    username: ENC[AES256_GCM,data:gQtggONp,iv:Yram6ozHYpI6ajcnWNWOg5DwKoC/MxZqFr8rHlKQjuY=,tag:Eye9Ky0MRjNXMch3e27SLQ==,type:str]
+    url: ENC[AES256_GCM,data:jQkHVFq2dBn47js17U/y2LLGm1FLGDRSig==,iv:ML2NfQMGTgDqdHv0gRowFxFaprZBipU7S+5stTMeJSU=,tag:FnB7sEsO63Gk/k4jrm2fxA==,type:str]
+    type: ENC[AES256_GCM,data:WDfIxQ==,iv:mtwHwLs3736/2D1OM1lVkt6QIXo0CdkTRgmn3PYs7RQ=,tag:qRHC4XGAdJWvUxcAV9f6/g==,type:str]
+    password: ENC[AES256_GCM,data:8w+phQjOd4hHXTVtx4b9Zw==,iv:QlE/5UYYjYWcghiMe/MtuAP9ETWXfIyuSJiaOjugvsc=,tag:n+hp0SqnoXz5KhvY+gcs9Q==,type:str]
+    username: ENC[AES256_GCM,data:3I8aS8mZ,iv:Q8dblzdFavmryZLfVlBk4/HFiPaqtnz+aag0ffhEsZE=,tag:ZecwcvbEcxz60G46dtroDw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -64,14 +65,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2b0dMbkg3TkI4N0ZiTTVn
-            eFZoRklQVldyMk5qU0RsejZJWktlVktiY3hBCmUxWjQ1VWN1NlRSREplQWk1bE0z
-            djF1TU9yYnB4L2xJSm82K3BMbnhrZ1EKLS0tIEVLeGxGL1VDc2J1QjZ0cXdjNk1W
-            UzllOWNJMWdsWitxOGlPaUVSQmhuc0EK6rJfUXF+n1QKv8PDBYH0yxtiEwcyBgD7
-            ZvWCp75JsyJd3/cDruDo9oXPk+NeUAmkOWoic8/hoOdwcLbfxTN7WA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2S2hmbWVvcmx6VHNKS0Rh
+            OWFvUWg4emFsUUdiVGtWNGpoRTJ1OVNEbVNJCk90bmVuSE53cS84VkQxREJIQSta
+            ZU91M0Nra3BSVVIyOTQ5RVVoeXVPYTQKLS0tIEtKdDlHU1FwRjJmbmp2cDhQWUpT
+            Ryt4aE9pdFNzdVE3RDJIemhVVTY3dEUKdCvlBGzs2JZeHK1iqDWuFUwIpKi2NUSE
+            8sv03IU5IswcNwxJxJ9I4e/m2wjxNG5uTGaTho5666LdhTDU3RvKCw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-20T00:16:30Z"
-    mac: ENC[AES256_GCM,data:m4bvaqZ8WF+EDQdm1PlWvz71v38uo+js/O9bu+Mp+ajfyTwQ3teKNyuLd9fH3NfZibiNlLpW5HPFGY2+8zEYjvjSq/5Bo06Df4ygx+G1HOPP2vuycMq1SKch0GqLmH6BV7wiVTwZtdvt3BU6hmEPEHJ1G4qIuTvgqZbPXezQdJw=,iv:mVyF6tEnJw7H0actGwuog/lG/dKCLpWI4+ef9vsgKjc=,tag:oOkFeGvYweH4ZWUnj5dlFQ==,type:str]
+    lastmodified: "2022-08-20T00:20:01Z"
+    mac: ENC[AES256_GCM,data:EQTosBH5O/M6rF6T2fOEBVxJxjNSjSJ/n9ae8AzoE1V8Wqim90Ej8p6EopyL4RoD3CE2Q2+pmdpjYU8SACA3N6DIE5QprYelLroj7dpyTktiu8JN2r9pBCAo3gwHSpgVc1am18kvcZ1gLKXTxkkZOwFs2v48KkhqxZE78qhFQns=,iv:LXTTGGjQlCk+GplLnRffk+ppya2LpDWAlen5G9sQX+A=,tag:H2kSCKF0eRKtGXXAoyMzQw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
