Set password to correct bcrypt encryption

--- a/cluster/apps/argocd/argocd/argocd-secrets.sops.yaml
+++ b/cluster/apps/argocd/argocd/argocd-secrets.sops.yaml
@@ -13,16 +13,17 @@ metadata:
         meta.helm.sh/release-name: argocd
 type: Opaque
 data:
-    #ENC[AES256_GCM,data:zJgzqDmIL2IWvkrh8nyNtPZPQRW92Erlw0IWogu0xG3X3YjvPpjPFhUFP5JEEUFbnrFZmHqufTUGUZo=,iv:yD0w8ASzn/MdbMFg4my/CmPimeobg9Oi7P6Yy1KJwXc=,tag:yWvRWsTbW1+6ocsLhYDwcA==,type:comment]
-    #ENC[AES256_GCM,data:eHSXTWbV3K0+9sATxLtgkMicOrixSI4GWqmHe9MXE35Px2JU8QCP6FHlkS1ECE0wdIbTuKAoNQWEF4yY1s671zNjgB2xn4X00XR/CAFH0g==,iv:8ogDbiEqjvF8/ETqEP6S5i3h9CvG6wPmXjbNCxJxfEA=,tag:jhV6ODKHFdTwO+ZnQJ+YFw==,type:comment]
-    #ENC[AES256_GCM,data:M9ay4+u2wgf1,iv:fytTB+hTmx3YXA4pccvE8WiOzDx5hFSEE351FCFmVv0=,tag:53ds3i1g5nEN9PJH07Wcig==,type:comment]
-    #ENC[AES256_GCM,data:86Bytn7TcfCd,iv:pS3O/KEnv5SYZdvq91dG9CNetE/I+JXZS5pnK592U4A=,tag:dq8rR0RSiwPWmg+1EasvoQ==,type:comment]
-    #ENC[AES256_GCM,data:1BBceXtLcxJ4v0aylZmWaVImoT9aZI3jK1pi9BprwmVSx7eNOITStfKphSNqXTzHY5zPtMxfQ6Dgaz4tAT7Hs1AYPAYhQLesiA==,iv:TTp0ITNzRy3b2Z+0Qv9YiFuYOoCmShTUty7BXq0Fog4=,tag:QYrD6fm5dwZia3QLcrypfQ==,type:comment]
-    #ENC[AES256_GCM,data:kxKMFvyq10Hr/b2M1WskXclXkrowbtmoG1C0pQcNHhecFhCmZwo/zhVqT9DuV28zElL4aOh48VMxvIn8SBP3E00P9J4=,iv:+Lh+GYtYMhK1SU9y9Ty1Tix7j+uYZVsFxHTt31dygQ4=,tag:S+2t7Z1YmO7Kfgmz4teXAg==,type:comment]
-    admin.password: ENC[AES256_GCM,data:pvXIHsN2NPfCn/+68ug/I68oviIj5qQpOGScE0j/c7k=,iv:B3SDRVH8jnf3dYnL0PDNmwHzBaxfda1loe2CPtxiOKg=,tag:yTac/mlG3tCsYdDTSQFOVw==,type:str]
-    #ENC[AES256_GCM,data:KkJrDs6nv0AavsCfkWwVaTdY50TuShxy8Td6brev1lsNrMOpmFsEvy28otm2rGYrfOvzQgaIdCUJysYAqc6K,iv:m4uSGY6EtH1UXep7KWTdU+TakRSC3M71m2qMhmV1d0U=,tag:+FRVTYlk6tqBMKqVVza/Rg==,type:comment]
-    #ENC[AES256_GCM,data:4RbHjYiXUZ8BVUJDbm+rJFzwh9TqBqpcCN+f/A==,iv:GOtjAvoL/N7nnNp49xIqnLxYCISapD5Ldeff3houDFA=,tag:LmrkqzfcjFp55l1PKCimFg==,type:comment]
-    #ENC[AES256_GCM,data:5ZA969zy0VV5NZefQqBD0chR,iv:8vvtdMccZTgUxBIFuxARGh5Tv4QZY+jA4c27CfEWl9w=,tag:11mDfRoi4uVL3Lrkwq0TJg==,type:comment]
+    #ENC[AES256_GCM,data:zHd+nYGrdPMPYl20yTBe2kijjWWCQqk39/DJPLjNpDb1+22KIpnaj/0iNsGlai7/j66hpr2ckzEbsTc=,iv:rLbLyH0J2noEUGIBdXKlsi20DPnFAxT7DVxqYhqA4YE=,tag:CwM/ZmGuDtQaPGBPBKR6Dg==,type:comment]
+    #ENC[AES256_GCM,data:hSqC7ar/YP4QuRgSyYTWeZ7VnzT1g+IlC4PyyJ3BhnE6r7v3ERj/nm4ErF6pDcSoLxq0vls7UzcdjfmxZM31ImJPHEGdaz650411SNs3JQ==,iv:vosxHOYDJaSKVZ7RsfWty1Vf7wACaV3DuIVC5hIPC3s=,tag:alJkITpXVFSpllzpCbToDw==,type:comment]
+    #ENC[AES256_GCM,data:3AyJfBDKYEGG,iv:PjAAFmR/IQGuQnSg23FZQZPmeBo2LrXJjGovmZXprP8=,tag:c9huTllsoc7l6USFgAZB1g==,type:comment]
+    #ENC[AES256_GCM,data:Atw8zF9pjlJo,iv:D1AzOCIVaXdIjR4vtaX/MDl96Y0kHZ1A5L0Dh3h0oMY=,tag:sADwiPEymT4eUlTgoocMnw==,type:comment]
+    #ENC[AES256_GCM,data:ysZK/O7DOy+k7L0NcRD2ilF/bY7YIGGPEJI0Hr9IDy83wPKfx8tPRaraFiHTNR3PwRDCtVSIPs+ChHyi+kEnhjS+SNmiWPgARw==,iv:5v9Lt2RLNMBeFyQAy3hqxrsX0RXwuJBYaDxhHf/5Xes=,tag:AHv/KVA7O1WXz4i7rEAFbA==,type:comment]
+    #ENC[AES256_GCM,data:7m/Ji7syU65hwU7LrAyABjN5m8gYhmHpJ4X7mAfTyPN1VFLq4AmNORCRqFPKo1H1N8cyXDPmH/yAGaXWJEso8GrGk+E=,iv:AOQ/VhhcZ5YRwkusGxrlDFlbJmAVZVS9SAun3ts8gSI=,tag:l4S7wQ0eV8qfOpi19QWopQ==,type:comment]
+    #ENC[AES256_GCM,data:BS5lpXjs61MfSkkqZZfaoAQ+KCcV4OWR6wjAjtQ2O+XAsAAzToU0nMxkVgK5u5Tm78H+YsCXdpucGESCUZCt+Pc88X+lsOv3kqSqxH0Ae8QqyIhkVpCSjr615963SAiUgP0AVUdskQ7z3xnb+MavwGI=,iv:9NoSIVgupm0TShrOlJ0D+3RnnBft63PAWFQ6JJAEFUk=,tag:3jFeun3ihoTyqvqGoqxT6A==,type:comment]
+    admin.password: ENC[AES256_GCM,data:kdPZcZBgNUOUvZ1tlUOIUYie/G643fDqSoFf3my76sKiyorov99Ls9+aefrhChi4mt/JNXMEc9h86DA0,iv:pz2mu8OYhT7mDTbJzNdfUqNaKbwY77vPlp167vhvSCw=,tag:mzzCS0qdWP7+1CozPZgp3Q==,type:str]
+    #ENC[AES256_GCM,data:86te3lGddb7/LGRrLQphBoJmrFCO1NWlBR8voME26O6zXupCz0V0QIKsAPNKlSDAjmjYi8e3vP4b0Bp+sg9N,iv:glFSdChy5QYDxDOUgTm0UjPkk65cZRX0AzWpBBiNF1o=,tag:l0nUtv9l6F4VOu0g8w6IDg==,type:comment]
+    #ENC[AES256_GCM,data:ZETq15ntCKSYrgs1TLG1V+sy/RlhK2dLVWhXrA==,iv:2GWBhhuxlrAbaK6SfXI4d7O9nZWXTOyuDbfjwuQJc34=,tag:sCzSmy28KgYMJ6uzGwFeHg==,type:comment]
+    #ENC[AES256_GCM,data:ZDLkGSVJBXKZZ9kuIGDW28rd,iv:7RinVhK9CVr8nhT4QEukPJNbUnsbctppGf+6s8O1u/0=,tag:N69p4GBXuflZ17Cd/LndFg==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -32,14 +33,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2S2hmbWVvcmx6VHNKS0Rh
-            OWFvUWg4emFsUUdiVGtWNGpoRTJ1OVNEbVNJCk90bmVuSE53cS84VkQxREJIQSta
-            ZU91M0Nra3BSVVIyOTQ5RVVoeXVPYTQKLS0tIEtKdDlHU1FwRjJmbmp2cDhQWUpT
-            Ryt4aE9pdFNzdVE3RDJIemhVVTY3dEUKdCvlBGzs2JZeHK1iqDWuFUwIpKi2NUSE
-            8sv03IU5IswcNwxJxJ9I4e/m2wjxNG5uTGaTho5666LdhTDU3RvKCw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoSjJRNEpsYi81SHBsQ3Yr
+            ZU5LV3Z6ekRrbTRCMmNsWlJTZ2lSNUVSL0g4CnJFaXNTalJNUldXVHNWZnZ0ditr
+            bm9TRHRoMFBOOEdkVDg3cVZuajdEK00KLS0tIGt3VFBhM2w5ZEEzRHFxL2p4R0xh
+            T3FCeUVPUmpwaXBVM25sUXNxUzNjYmMK9UUa+dFh9erXMF9iLK/lOdDS/dsfkLBB
+            O9USPHgdFeq1euc8ksNuGjQBvU8vcNm9eGbWsP/5AnOzfRwXxdzFrg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-20T00:20:01Z"
-    mac: ENC[AES256_GCM,data:EQTosBH5O/M6rF6T2fOEBVxJxjNSjSJ/n9ae8AzoE1V8Wqim90Ej8p6EopyL4RoD3CE2Q2+pmdpjYU8SACA3N6DIE5QprYelLroj7dpyTktiu8JN2r9pBCAo3gwHSpgVc1am18kvcZ1gLKXTxkkZOwFs2v48KkhqxZE78qhFQns=,iv:LXTTGGjQlCk+GplLnRffk+ppya2LpDWAlen5G9sQX+A=,tag:H2kSCKF0eRKtGXXAoyMzQw==,type:str]
+    lastmodified: "2022-08-20T11:47:17Z"
+    mac: ENC[AES256_GCM,data:WeEscre3jTqFifBKKoaCkTGNIjDIWPM/0sbiz/Rmprb+xeHfNUusEM1WD68ndTTTONZC3km7zSNxQO1WKMtO06TD75rZ96vMMKFEqXeUXqphgelTBHqcOg0lHKpx6N+bLnC8hznhZe/8RtFdrc0yrVGAd9jmyvKlynVSLbPe+EU=,iv:D+OJDMkqf3eH3F+q0FIsj/XDzupc9f/k5foDgWv9/9I=,tag:Y+ucUz6s+Oa1H0i9YmGQxg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
@@ -52,10 +53,10 @@ metadata:
     labels:
         argocd.argoproj.io/secret-type: repo-creds
 stringData:
-    url: ENC[AES256_GCM,data:jQkHVFq2dBn47js17U/y2LLGm1FLGDRSig==,iv:ML2NfQMGTgDqdHv0gRowFxFaprZBipU7S+5stTMeJSU=,tag:FnB7sEsO63Gk/k4jrm2fxA==,type:str]
-    type: ENC[AES256_GCM,data:WDfIxQ==,iv:mtwHwLs3736/2D1OM1lVkt6QIXo0CdkTRgmn3PYs7RQ=,tag:qRHC4XGAdJWvUxcAV9f6/g==,type:str]
-    password: ENC[AES256_GCM,data:8w+phQjOd4hHXTVtx4b9Zw==,iv:QlE/5UYYjYWcghiMe/MtuAP9ETWXfIyuSJiaOjugvsc=,tag:n+hp0SqnoXz5KhvY+gcs9Q==,type:str]
-    username: ENC[AES256_GCM,data:3I8aS8mZ,iv:Q8dblzdFavmryZLfVlBk4/HFiPaqtnz+aag0ffhEsZE=,tag:ZecwcvbEcxz60G46dtroDw==,type:str]
+    url: ENC[AES256_GCM,data:8T0Clk8GUa6bHohpg5kGzALtVIdNLQHLcg==,iv:wDC8HTnY+83ouiFAMM8V13xBnij+O5y6OYkyEMQV++0=,tag:I0yQwrukaxmdDmNBNe3RsA==,type:str]
+    type: ENC[AES256_GCM,data:Z8wkiA==,iv:J6LbT4GcrjU4sUMismc7/yVpRJVyPswHBEByUBwYfwk=,tag:5eDZlfV71mb/wyK31iKDcw==,type:str]
+    password: ENC[AES256_GCM,data:Sux9OAekYb6vIHrGXk22jg==,iv:4YkMZOGPLNttf/KKsUzHFWznqqazAdUZWhm9Z0IPKWc=,tag:sDlsYBShihAwVPbF0A9jDA==,type:str]
+    username: ENC[AES256_GCM,data:YAXiJKBn,iv:Ceb0E+pxLnercCf4y/CbtxAT1VWriQ0A0QaPffEqBoI=,tag:F6DNwiaZnFodSzpBKVbHGA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -65,14 +66,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2S2hmbWVvcmx6VHNKS0Rh
-            OWFvUWg4emFsUUdiVGtWNGpoRTJ1OVNEbVNJCk90bmVuSE53cS84VkQxREJIQSta
-            ZU91M0Nra3BSVVIyOTQ5RVVoeXVPYTQKLS0tIEtKdDlHU1FwRjJmbmp2cDhQWUpT
-            Ryt4aE9pdFNzdVE3RDJIemhVVTY3dEUKdCvlBGzs2JZeHK1iqDWuFUwIpKi2NUSE
-            8sv03IU5IswcNwxJxJ9I4e/m2wjxNG5uTGaTho5666LdhTDU3RvKCw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoSjJRNEpsYi81SHBsQ3Yr
+            ZU5LV3Z6ekRrbTRCMmNsWlJTZ2lSNUVSL0g4CnJFaXNTalJNUldXVHNWZnZ0ditr
+            bm9TRHRoMFBOOEdkVDg3cVZuajdEK00KLS0tIGt3VFBhM2w5ZEEzRHFxL2p4R0xh
+            T3FCeUVPUmpwaXBVM25sUXNxUzNjYmMK9UUa+dFh9erXMF9iLK/lOdDS/dsfkLBB
+            O9USPHgdFeq1euc8ksNuGjQBvU8vcNm9eGbWsP/5AnOzfRwXxdzFrg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-20T00:20:01Z"
-    mac: ENC[AES256_GCM,data:EQTosBH5O/M6rF6T2fOEBVxJxjNSjSJ/n9ae8AzoE1V8Wqim90Ej8p6EopyL4RoD3CE2Q2+pmdpjYU8SACA3N6DIE5QprYelLroj7dpyTktiu8JN2r9pBCAo3gwHSpgVc1am18kvcZ1gLKXTxkkZOwFs2v48KkhqxZE78qhFQns=,iv:LXTTGGjQlCk+GplLnRffk+ppya2LpDWAlen5G9sQX+A=,tag:H2kSCKF0eRKtGXXAoyMzQw==,type:str]
+    lastmodified: "2022-08-20T11:47:17Z"
+    mac: ENC[AES256_GCM,data:WeEscre3jTqFifBKKoaCkTGNIjDIWPM/0sbiz/Rmprb+xeHfNUusEM1WD68ndTTTONZC3km7zSNxQO1WKMtO06TD75rZ96vMMKFEqXeUXqphgelTBHqcOg0lHKpx6N+bLnC8hznhZe/8RtFdrc0yrVGAd9jmyvKlynVSLbPe+EU=,iv:D+OJDMkqf3eH3F+q0FIsj/XDzupc9f/k5foDgWv9/9I=,tag:Y+ucUz6s+Oa1H0i9YmGQxg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
